<resources>
    <string name="app_name">Arithmometer</string>
    <string name="c_ce">C</string>
    <string name="div">÷</string>
    <string name="mult">x</string>
    <string name="back"><![CDATA[<<]]></string>
    <string name="seven">7</string>
    <string name="eight">8</string>
    <string name="nine">9</string>
    <string name="minus">-</string>
    <string name="four">4</string>
    <string name="five">5</string>
    <string name="six">6</string>
    <string name="add">+</string>
    <string name="one">1</string>
    <string name="two">2</string>
    <string name="three">3</string>
    <string name="equal">=</string>
    <string name="zero">0</string>
    <string name="dot">.</string>

    <!-- Settings page -->
    <string name="set_title">Settings</string>
    <string name="set_setting_name">Dark Theme</string>
    <string name="back_button_name">Back</string>
</resources>