<?xml version="1.0" encoding="utf-8"?>
<GridLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:columnCount="4">

    <com.google.android.material.button.MaterialButton
        android:id="@+id/button_ce"
        android:text="@string/c_ce"
        style="@style/button_theme" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/button_div"
        android:text="@string/div"
        style="@style/button_theme" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/button_mult"
        android:text="@string/mult"
        style="@style/button_theme"/>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/button_back"
        android:text="@string/back"
        style="@style/button_theme"/>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/button_7"
        android:text="@string/seven"
        style="@style/button_theme" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/button_8"
        android:text="@string/eight"
        style="@style/button_theme"/>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/button_9"
        android:text="@string/nine"
        style="@style/button_theme"/>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/button_minus"
        android:text="@string/minus"
        style="@style/button_theme"/>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/button_4"
        android:text="@string/four"
        style="@style/button_theme"/>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/button_5"
        android:text="@string/five"
        style="@style/button_theme"/>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/button_6"
        android:text="@string/six"
        style="@style/button_theme"/>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/button_add"
        android:text="@string/add"
        style="@style/button_theme"/>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/button_1"
        android:text="@string/one"
        style="@style/button_theme"/>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/button_2"
        android:text="@string/two"
        style="@style/button_theme"/>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/button_3"
        android:text="@string/three"
        style="@style/button_theme"/>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/button_equal"
        android:layout_rowSpan="2"
        android:text="@string/equal"
        style="@style/button_theme" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/button_0"
        android:layout_columnSpan="2"
        android:text="@string/zero"
        style="@style/button_theme" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/button_dot"
        android:text="@string/dot"
        style="@style/button_theme" />

</GridLayout>